# monarch-trapi-kp

./: .env-template  .gitignore  CHANGELOG.md  DEVELOPER_README.md  Dockerfile  Makefile  README.md  attr_val_map.json  docker-compose.yaml  main.sh  pyproject.toml  requirements.txt  skip_attr.json
.github/workflows/: build-and-deploy-image.yaml
docs/: MultiCurieQueries.ipynb  trapi_notes_12-Jan-2024.txt
mmcq/: openapi-config.yaml
mmcq/examples/: reasoner-trapi-1.5.json
mmcq/logs/: README.MD  README.md
mmcq/metadata/: meta_knowledge_graph.json
mmcq/models/: __init__.py  models_trapi_1_5.py
mmcq/services/: app_common.py  app_trapi_1_4.py  app_trapi_1_5.py  config.py  mmcq.conf  server.py
mmcq/services/util/: __init__.py  api_utils.py  constraints.py  logutil.py  metadata.py  monarch_adapter.py  question.py  trapi.py
mta/: openapi-config.yaml
mta/examples/: reasoner-trapi-1.1.json  reasoner-trapi-1.2.json  reasoner-trapi-1.4.json  reasoner.json
mta/logs/: README.MD
mta/metadata/: about.json  meta_knowledge_graph.json  sri_testing_data.json
mta/models/: models_trapi_1_4.py  shared.py
mta/monarch/: __init__.py
mta/services/: app_common.py  app_trapi_1_4.py  config.py  server.py
mta/services/util/: __init__.py  api_utils.py  attribute_mapping.py  constraints.py  graph_adapter.py  logutil.py  metadata.py  monarch_adapter.py  question.py  trapi.py
mtkp/: openapi-config.yaml
mtkp/examples/: overlay.json
mtkp/services/: app_common.py  app_trapi_1_4.py  config.py  server.py
mtkp/services/util/: __init__.py  api_utils.py  attribute_mapping.py  logutil.py  monarch_adapter.py  question.py  trapi.py
tests/: test_logger.py  test_monarch_adapter.py
