[tool.poetry]
name = "monarch-trapi-kp"
version = "0.0.8"
description = "Translator (Knowledge Provider) Reasoner API wrapper for the Semantic Similarity algorithm against the knowledge graph of the Monarch Initiative information system"
authors = [
    "Richard Bruskiewich <richard.bruskiewich@delphinai.com>",
    "Kevin Schaper <kevin@tislab.org>",
    "Matt Brush <matt@tislab.org>",
    "Sierra Moxon <smoxon@lbl.gov>"
]
maintainers = ["Richard Bruskiewich <richard.bruskiewich@delphinai.com>"]
license = "BSD 3-Clause"
readme = "README.md"

homepage = "https://monarchinitiative.org/"
repository = "https://github.com/monarch-initiative/monarch-trapi-kp"
documentation = "https://github.com/monarch-initiative/monarch-trapi-kp/README.md"
keywords = [
    "LBNL",
    "NCATS",
    "Monarch Initiative",
    "Biomedical Data Translator",
    "Translator",
    "ReasonerAPI",
    "TRAPI",
    "Biolink Model"
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

packages = [
    {include = "mmcq"}
]

include = [
    { path = "tests" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
coverage= "^5.5"  # "^7.3.3"
pyaml= "^20.4.0"  # "^23.9.7"
pytest= "^8.2.2"  # "^7.4.3"
pytest-asyncio= "^0.15.1"  # "^0.21.1"
pytest-httpx = "^0.30.0"
deepdiff = "^6.7.1"
requests = "^2.28.1"
fastapi = "^0.85.0" # "^0.105.0"
starlette = "^0.20.4" # "^0.27.0"
uvicorn = "^0.25.0"
gunicorn = "^21.2.0"
pydantic = "^1.8" # ">=1.8,<2"
reasoner-pydantic = "^5.0.3"
httpx = "^0.27.0"
jsonasobj = "^1.3.1"
httpcore = "^1.0.5"
bmt = "^1.4.2"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"

# Optional 'extra' Jupyter Notebook support
notebook = { version = "^7.2.0", optional = true }

# [tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.poetry.urls]
"Change Log" = "https://github.com/monarch-initiative/monarch-trapi-kp/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/monarch-initiative/monarch-trapi-kp/issues"

[tool.poetry.extras]
jupyter = ["notebook"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"